frontend/src/styles.scss
/* You can add global styles to this file, and also import other style files */
@use './tailwind.css';
@use 'primeicons/primeicons.css';
@use './layout/variables/_common';

body,
app-root {
  display: flex;
  flex-direction: column;
  min-height: 100vh;
}

.font-inter {
  font-family: 'Inter', sans-serif;
}

.p-menu-item-link-active {
  background-color: var(--color-gray-400);

  &:where(.dark-mode, .dark-mode *) {
    background-color: var(--p-surface-600);
  }

  @media (width >= 80rem) {
    background-color: var(--color-gray-100);

    &:where(.dark-mode, .dark-mode *) {
      background-color: var(--p-zinc-900);
    }
  }
}


.p-dataview {
  border: 0;
}

@media (width < 80rem) {
  .container {
    max-width: 95vw;
  }
}

.ag-cell-wrapper {
  height: 100%;
}

.p-panel-icons-end {
  margin-left: auto;
}

.p-button {
  fa-icon {
    svg {
      width: auto;
    }
  }
}

.router-wrapper-full {
  & > *:nth-child(2) {
    display: flex;
    flex-direction: column;
    //min-height: 100%;
    min-width: 100%;
  }
}

.p-dialog-content {
  flex: 1;
  display: flex;
  flex-direction: column;
}

:root {
  --p-text-color: #000;
  --text-color-inverse: #fff;
  --text-color-secondary: #374151;

  &:where(.dark-mode, .dark-mode *) {
    --p-text-color: #e6e6e6;
    --p-content-color: #e6e6e6;
    --text-color-inverse: var(--p-zinc-400);
    --text-color-secondary: #b3b3b3;
    //--p-card-background: var(--p-surface-800);
    --p-card-shadow: 0 0.125rem 0.25rem rgba(255, 255, 255, 0.075);
  }
}

